--- a/sites/index.html
+++ b/sites/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HELLO COURSERA</title>
+	<title>MY TEST FILE</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="theStyleSheet.css">
 </head>
+
 <body>
 
-	<h2>Hello Coursera! Here I am learning new suff</h2>
+	<header><h1>RESPONSIVE WEB PAGE LAYOUT</h1></header>
 
+	<div class="row1">
+		<div class="div1 col-lg-3 col-md-3 col-sm-4">FIRST ROW 1</div>
+		<div class="div2 col-lg-6 col-md-6 col-sm-8">FIRST ROW 2</div>
+		<div class="div3 col-lg-3 col-md-3 col-sm-4">FIRST ROW 3</div>
+	</div>
+
+	<div class="row2">
+		<div class="div1 col-lg-6 col-md-6 col-sm-5">SECOND ROW 1</div>
+		<div class="div2 col-lg-6 col-md-6 col-sm-7">SECOND ROW 2</div>
+	</div>
+
+	<div class="row3">
+		<div class="col-lg-2 col-md-2 col-sm-4">THIRD ROW 1</div>
+		<div class="col-lg-2 col-md-2 col-sm-4">THIRD ROW 2</div>
+		<div class="col-lg-2 col-md-2 col-sm-4">THIRD ROW 3</div>
+		<div class="col-lg-2 col-md-2 col-sm-4">THIRD ROW 4</div>
+		<div class="col-lg-2 col-md-2 col-sm-4">THIRD ROW 5</div>
+		<div class="col-lg-2 col-md-2 col-sm-4">THIRD ROW 6</div>
+	</div>
+
+	
 </body>
+
 </html>
