--- a/week2/index.html
+++ b/week2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewpoint" content="width=device-width, initail-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>WEEK 2 ASSIGNMENT</title>
 </head>
