end of week 3 bix

--- a/theRestaurant/menu-categories.html
+++ b/theRestaurant/menu-categories.html
@@ -48,6 +48,12 @@
 
 						<div id="collapsibleMenu" class="collapse navbar-collapse justify-content-end mr-1">
 							<ul class="navbar-nav text-center font-weight-bold">
+								<li class="nav-item d-md-none">
+									<a class="nav-link" href="index.html">
+										<span class="material-icons align-middle">home</span><br class="d-none d-lg-inline">
+										<span class="align-middle">Home</span>
+									</a>
+								</li>
 								<li class="nav-item active">
 									<a class="nav-link" href="menu-categories.html">
 										<span class="material-icons align-middle">restaurant_menu</span><br class="d-none d-lg-inline">
@@ -85,6 +91,16 @@
 
 	<!-- PAGE MAIN CONTENT -->
 	<div id="mainContent" class="container mt-4">
+
+		<div id="phoneNumber-sm" class="d-block d-md-none text-center">
+			<a href="tel:+27 74 459 9790">
+				<span class="material-icons align-middle">call</span>
+				<span class="align-middle">+27&nbsp;74&nbsp;459&nbsp;9790</span>
+			</a>
+		</div>
+
+		<div id="weDeliver" class="d-block d-md-none text-center text-uppercase mb-4">*We&nbsp;Deliver</div>
+
 		<h2 id="menuCategoriesTitle" class="text-center">Menu Categories</h2>
 		<div id="categoryInfo" class="text-center">
 			Substituting white rice with brown rice or fried rice after 3:00pm will be R10 for a pint or R20 for a quart.
