--- a/theRestaurant/index.html
+++ b/theRestaurant/index.html
@@ -48,6 +48,12 @@
 
 						<div id="collapsibleMenu" class="collapse navbar-collapse justify-content-end mr-1">
 							<ul class="navbar-nav text-center font-weight-bold">
+								<li class="nav-item d-md-none active">
+									<a class="nav-link" href="index.html">
+										<span class="material-icons align-middle">home</span><br class="d-none d-lg-inline">
+										<span class="align-middle">Home</span>
+									</a>
+								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="menu-categories.html">
 										<span class="material-icons align-middle">restaurant_menu</span><br class="d-none d-lg-inline">
